remove wildcard from ingress manifest

--- a/src/ContosoTraders.Api.Products/Manifests/Ingress.yaml
+++ b/src/ContosoTraders.Api.Products/Manifests/Ingress.yaml
@@ -19,7 +19,7 @@ spec:
     - host: {AKS_FQDN}
       http:
         paths:
-          - path: /(.*)
+          - path: /
             pathType: Prefix
             backend:
               service:
