use ImplementationSpecific in order to use wildcard path in Ingress manifest

--- a/src/ContosoTraders.Api.Products/Manifests/Ingress.yaml
+++ b/src/ContosoTraders.Api.Products/Manifests/Ingress.yaml
@@ -19,8 +19,8 @@ spec:
     - host: {AKS_FQDN}
       http:
         paths:
-          - path: /
-            pathType: Prefix
+          - path: /*
+            pathType: ImplementationSpecific
             backend:
               service:
                 name: contoso-traders-products
