Let's try wildcard with Exact pathType

--- a/src/ContosoTraders.Api.Products/Manifests/Ingress.yaml
+++ b/src/ContosoTraders.Api.Products/Manifests/Ingress.yaml
@@ -20,7 +20,7 @@ spec:
       http:
         paths:
           - path: /*
-            pathType: ImplementationSpecific
+            pathType: Exact
             backend:
               service:
                 name: contoso-traders-products
