--- a/src/ContosoTraders.Api.Products/Manifests/Ingress.yaml
+++ b/src/ContosoTraders.Api.Products/Manifests/Ingress.yaml
@@ -20,7 +20,7 @@ spec:
       http:
         paths:
           - path: /(.*)
-            pathType: Prefix
+            pathType: ImplementationSpecific
             backend:
               service:
                 name: contoso-traders-products
