--- a/src/ContosoTraders.Ui.Website/package.json
+++ b/src/ContosoTraders.Ui.Website/package.json
@@ -51,5 +51,8 @@
     "csv-parse": "^5.3.4",
     "sass": "^1.63.6",
     "typescript": "^5.1.6"
+  },
+  "overrides": {
+    "typescript": "^5.1.6"
   }
 }
