--- a/.github/workflows/contoso-traders-cloud-testing.yml
+++ b/.github/workflows/contoso-traders-cloud-testing.yml
@@ -652,10 +652,12 @@ jobs:
       - name: install dependencies
         run: npm ci
       - name: run playwright tests
+        id: test
         run: HOME=/root npx playwright test
       - name: upload playwright report
         uses: actions/upload-artifact@v3
-        if: always()
+        # only upload report if tests failed
+        if: steps.test.outcome != 'success'
         with:
           name: playwright-report
           path: src/ContosoTraders.Ui.Website/playwright-report/
