--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,7 +4,9 @@ updates:
     directory: "/src/ContosoTraders.Ui.Website" # Location of package manifests
     schedule:
       interval: "weekly"
+    open-pull-requests-limit: 1      
   - package-ecosystem: "github-actions"
     directory: "/"
     schedule:
-      interval: "weekly"      
+      interval: "weekly"
+    open-pull-requests-limit: 1
