--- a/.azurepipelines/contoso-traders-cloud-testing.yml
+++ b/.azurepipelines/contoso-traders-cloud-testing.yml
@@ -393,11 +393,11 @@ stages:
               az aks get-credentials --resource-group $(RESOURCE_GROUP_NAME)$(SUFFIX) --name $(AKS_CLUSTER_NAME)$(SUFFIX)
               helm repo add ingress-nginx https://kubernetes.github.io/ingress-nginx
               helm repo update
-              helm upgrade --install nginx-ingress ingress-nginx/ingress-nginx \
+              helm upgrade --install --wait --timeout=1h nginx-ingress ingress-nginx/ingress-nginx \
                 --set controller.replicaCount=1 \
-                --set controller.nodeSelector."beta\.kubernetes\.io/os"=linux \
-                --set defaultBackend.nodeSelector."beta\.kubernetes\.io/os"=linux \
-                --set controller.admissionWebhooks.patch.nodeSelector."beta\.kubernetes\.io/os"=linux \
+                --set controller.nodeSelector."kubernetes\.io/os"=linux \
+                --set defaultBackend.nodeSelector."kubernetes\.io/os"=linux \
+                --set controller.admissionWebhooks.patch.nodeSelector."kubernetes\.io/os"=linux \
                 --set controller.service.externalTrafficPolicy=Local
             displayName: create ingress controller
           - task: AzureCLI@1
