--- a/.github/workflows/contoso-traders-cloud-testing.yml
+++ b/.github/workflows/contoso-traders-cloud-testing.yml
@@ -658,8 +658,7 @@ jobs:
         run: HOME=/root npx playwright test
       - name: upload playwright report
         uses: actions/upload-artifact@v3
-        # only upload report if tests failed
-        if: steps.test.outcome != 'success'
+        if: always()
         with:
           name: playwright-report
           path: src/ContosoTraders.Ui.Website/playwright-report/
