set bing maps api key env var for npm run build step

--- a/.azurepipelines/contoso-traders-cloud-testing.yml
+++ b/.azurepipelines/contoso-traders-cloud-testing.yml
@@ -515,6 +515,8 @@ stages:
           - script: npm ci
             displayName: npm ci
             workingDirectory: src/ContosoTraders.Ui.Website
+          - script: echo "##vso[task.setvariable variable=REACT_APP_BINGMAPSKEY]$(BINGMAPSKEY)"
+            displayName: set REACT_APP_BINGMAPSKEY            
           - script: npm run build
             displayName: npm run build
             workingDirectory: src/ContosoTraders.Ui.Website
