--- a/.github/workflows/contoso-traders-cloud-testing.yml
+++ b/.github/workflows/contoso-traders-cloud-testing.yml
@@ -417,6 +417,8 @@ jobs:
         working-directory: src/ContosoTraders.Ui.Website
       - name: npm run build
         run: npm run build
+        env:
+          REACT_APP_BINGMAPSKEY: ${{ secrets.BINGMAPSKEY }}
         working-directory: src/ContosoTraders.Ui.Website
       - name: deploy ui to storage
         uses: azure/CLI@v1
